src/test/deca/context/invalid/intermediaire2/elseif/05condition_notInteger.deca
{
    int x;
    if (3 < 2) {
        print("Trop petit !");
    } else if ( !x ){
        print("Trop grand !");
    }
}